# s7cal

./: .clang-format  CMakeLists.txt  README.md
man/: CMakeLists.txt  s7cal.1.md
po/: CMakeLists.txt  de.po
src/: calendar.cpp  calendar.h  colors.cpp  colors.h  data.h  holidays.cpp  holidays.h  i18n.cpp  i18n.h  main.cpp  three_month_view.h  userconfig.cpp  userconfig.h  utils.cpp  utils.h
